--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,11 +26,15 @@ if (flutterVersionName == null) {
 android {
     namespace = "com.mainipc.xiebaoxin"
     compileSdk = flutter.compileSdkVersion
-    ndkVersion = flutter.ndkVersion
+    ndkVersion = "26.3.11579264"
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    kotlinOptions {
+        jvmTarget = "17"
     }
 
     defaultConfig {
@@ -43,7 +47,7 @@ android {
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
         ndk {
-            abiFilters 'arm64-v8a'
+            abiFilters 'arm64-v8a', 'armeabi-v7a'
         }
     }
 
@@ -51,7 +55,7 @@ android {
         debug {
             externalNativeBuild {
                 cmake {
-                    arguments "-DANDROID_STL=c++_shared"
+                    arguments "-DANDROID_STL=c++_shared", "-DCMAKE_BUILD_TYPE=Debug"
                 }
             }
         }
@@ -61,7 +65,7 @@ android {
             signingConfig = signingConfigs.debug
             externalNativeBuild {
                 cmake {
-                    arguments "-DANDROID_STL=c++_shared"
+                    arguments "-DANDROID_STL=c++_shared", "-DCMAKE_BUILD_TYPE=Release"
                 }
             }
         }
@@ -76,6 +80,7 @@ android {
 
     packagingOptions {
         pickFirst 'lib/arm64-v8a/libc++_shared.so'
+        pickFirst 'lib/armeabi-v7a/libc++_shared.so'
     }
 }
 
