--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,13 @@ dependencies:
   image_picker: ^1.1.2
   camera: ^0.10.5+9
   permission_handler: ^11.3.0
+  package_info_plus: ^8.0.2
+  url_launcher: ^6.2.5
+  path_provider: ^2.1.3
+  network_info_plus: ^8.1.2
+  wifi_iot: ^0.3.18
+  qr_code_scanner: ^1.0.1
+  qr_flutter: ^4.1.0
 
 dev_dependencies:
   flutter_test:
