--- a/android/app/src/main/cpp/CMakeLists.txt
+++ b/android/app/src/main/cpp/CMakeLists.txt
@@ -1,25 +1,34 @@
-cmake_minimum_required(VERSION 3.22.1)
+cmake_minimum_required(VERSION 3.4.1)
 project(native_lib)
-
-# 设置C++标准
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-# 添加编译选项
-add_compile_options(-fPIC -Wall -Wextra)
-
-# 添加 MediaCodec 库
-find_library(mediandk-lib mediandk)
-
-# 添加 libp2p.so 库路径
-set(LIBP2P_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../jniLibs/${ANDROID_ABI})
-set(LIBP2P_LIB ${LIBP2P_DIR}/libp2p.so)
 
 add_library(
     native-lib
     SHARED
     native-lib.cpp
 )
+
+# 根据目标架构选择正确的so库路径
+if(ANDROID_ABI STREQUAL "arm64-v8a")
+    set(P2P_LIB_PATH ${CMAKE_SOURCE_DIR}/../jniLibs/arm64-v8a/libp2p.so)
+    target_compile_definitions(native-lib PRIVATE ANDROID_ABI_arm64_v8a)
+elseif(ANDROID_ABI STREQUAL "armeabi-v7a")
+    set(P2P_LIB_PATH ${CMAKE_SOURCE_DIR}/../jniLibs/armeabi-v7a/libp2p.so)
+else()
+    message(FATAL_ERROR "Unsupported ABI: ${ANDROID_ABI}")
+endif()
+
+add_library(
+    p2p
+    SHARED
+    IMPORTED
+)
+set_target_properties(
+    p2p
+    PROPERTIES IMPORTED_LOCATION
+    ${P2P_LIB_PATH}
+)
+
+target_include_directories(native-lib PRIVATE ${CMAKE_SOURCE_DIR})
 
 find_library(log-lib log)
 find_library(android-lib android)
@@ -28,20 +37,5 @@ target_link_libraries(
     native-lib
     ${log-lib}
     ${android-lib}
-    ${mediandk-lib}
-    GLESv2
-    EGL
-)
-
-# 链接 libp2p.so
-if(EXISTS ${LIBP2P_LIB})
-    target_link_libraries(native-lib ${LIBP2P_LIB})
-    message(STATUS "Linked with libp2p.so: ${LIBP2P_LIB}")
-else()
-    message(WARNING "libp2p.so not found at: ${LIBP2P_LIB}")
-endif()
-
-# 设置输出目录
-set_target_properties(native-lib PROPERTIES
-    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
+    p2p
 ) 
