--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   path_provider: ^2.1.3
   network_info_plus: ^5.0.2
   qr_flutter: ^4.1.0
+  flutter_screenutil: ^5.8.4
+  vector_math: ^2.1.4
 
 dev_dependencies:
   flutter_test:
